cmake_minimum_required(VERSION 3.8)
project(leetCode)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp 461.cpp 657.cpp 617.cpp 561.cpp 476.cpp 500.cpp 557.cpp 344.cpp 575.cpp 566.cpp 412.cpp 463.cpp 496.cpp 637.cpp 669.cpp 521.cpp 001.cpp 002.cpp 003.cpp 004.cpp)
add_executable(leetCode ${SOURCE_FILES})