cmake_minimum_required(VERSION 3.9)
project(leetcode_contest)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode_contest main.cpp "108/Unique Email Addresses.cpp" head.h "108/Binary Subarrays With Sum.cpp" "108/Minimum Falling Path Sum.cpp" 109/knightDialer.cpp "109/Number of Recent Calls.cpp" "107/Long Pressed Name.cpp" "107/Flip String to Monotone Increasing.cpp")